@@ -171,6 +171,8 @@ Current development version 3.32-14 (2023-11-08)
 - 14: Bugfix #1108: C import may fail because of nested comments [csrabak]<2>
 - 14: Bugfix #1109: Code generation for throw (rethrow) was defective <2>
 - 14: Bugfix #1110: Math.* conversion failed on Java/Processing import <2>
+- 14: Issue #1112: Analyser no longer complains about missing initialisation
+      and missing components on java.lang. and java.util. method calls <2>
 
 Version 3.32 (2021-09-19) requiring Java 11 or newer
 - 01: Bugfix #851/2: SPECIAL-NAMES sections caused COBOL parser abort <2>
